# xgb_label_encoder

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
clf_label_encoder/: classifier_label_enc.py  classifier_label_enc2.py
tests/: classifier_label_enc2_test.py  classifier_label_enc_test.py
