[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clf_classifier_label_enc"
dynamic = ["version", "readme"]
dependencies = [
    'scikit-learn>=1.3.0',
]
requires-python = ">=3.9"
authors = [
  {name = "Pawel Trajdos", email = "pawel.trajdos@pwr.edu.pl"},
]
maintainers = [
  {name = "Pawel Trajdos", email = "pawel.trajdos@pwr.edu.pl"}
]
description = "Classifier with Label encoder"

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E.*"]
keywords = ["xgblabelencoder"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools.dynamic]
version = {attr = "clf_label_encoder.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md"]}

[project.urls]
Repository = "https://github.com/ptrajdos/xgb_label_encoder.git"

[project.optional-dependencies]
test = [
    'coverage>=7.10.7, <8.0.0',
    'unittest-parallel>=1.7.0, <2.0.0',
    'pandas>=2.0.0, <3.0.0',
    'pdoc3>=0.11.1, <0.12',
    'pytest>=8.4.2, <9.0.0',
    'pytest-cov>=6.3.0, <7.0.0',
    'pytest-profiling>=1.8.1, <2.0.0',
    'pytest-xdist>=3.6.1, < 4.0.0',
    'snakeviz>=2.2.2, <3.0.0',
    'pylint>=3.3.9, <4.0.0',
    'flake8>=7.3.0, <8.0.0',
    'mypy>=1.19.1, <2.0.0',
    'tox>=4.0.0, <5.0.0'
]

[tool.setuptools]
packages = { find = { include = ["clf_label_encoder", "clf_label_encoder.*"] } }
